tests/compile-fail/component_provision_non_scoped_of_scoped.stderr
error: unable to provide scoped binding as regular object ::$CRATE::Foo (injectable)
requested by:::$CRATE::MyComponent.foo
  --> $DIR/component_provision_non_scoped_of_scoped.rs:33:1
   |
33 | test_epilogue!();
   | ^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `new` found for trait object `dyn MyComponent` in the current scope
  --> $DIR/component_provision_non_scoped_of_scoped.rs:30:56
   |
30 |     let component: Box<dyn MyComponent> = MyComponent::new();
   |                                                        ^^^ function or associated item not found in `dyn MyComponent`
